--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="uU0-VL-Pgh" id="sCO-cf-3qP"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="zVj-tc-cQb"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="zVj-tc-cQb">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="abz-yQ-KVS">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="uU0-VL-Pgh" id="XXG-2j-8G6"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z4f-O5-V1C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
